--- a/contacts.html
+++ b/contacts.html
@@ -18,9 +18,9 @@
             </a>
             <ul>
                 <li><a href="company.html">КОМПАНИЯ</a></li>
-                <li>ПРОДУКЦИЯ</li>
+                <li><a href="products.html">ПРОДУКЦИЯ</a></li>
                 <li><a href="documents.html">ДОКУМЕНТЫ</a></li>
-                <li><a href="contacts.html">КОНТАКТЫ</a></li>
+                <li>КОНТАКТЫ</li>
             </ul>
         </nav>
         <div>
@@ -30,40 +30,22 @@
     <nav>
         <a href="index.html">Главная</a>
         <hr>
-        Продукция
+        Контакты
     </nav>
     <main>
-        <article>
-            <h2>Наша продукция</h2>
-            <a href="products.self-tapping screws.html">
-                <figure>
-                    <img src="img/products/self-tapping screws/self-tapping screws.jpg" alt="САМОРЕЗЫ">
-                    <figcaption>САМОРЕЗЫ</figcaption>
-                </figure>
-            </a>
-            <a href="products.anchor technology.html">
-                <figure>
-                    <img src="img/products/anchor technology/anchor technology.jpg" alt="АНКЕРНАЯ ТЕХНИКА">
-                    <figcaption>АНКЕРНАЯ ТЕХНИКА</figcaption>
-                </figure>
-            </a>
-            <a href="products.screws.html">
-                <figure>
-                    <img src="img/products/screws/screws.jpg" alt="ШУРУПЫ">
-                    <figcaption>ШУРУПЫ</figcaption>
-                </figure>
-            </a>
-            <a href="products.metriсs.html">
-                <figure>
-                    <img src="img/products/metrics/metrics.jpg" alt="МЕТРИКА">
-                    <figcaption>МЕТРИКА</figcaption>
-                </figure>
-            </a>
-        </article>
-    </main>
-    <hr>
-    <article>
-        <h2>Остались вопросы? Напишите нам</h2>
+        <h2>Обратная связь</h2>
+        7(495) 970-70-05<br>
+        <br>
+        sales@vegakrep.ru<br>
+        <br>
+        142105, Московская область,<br>
+        г.Подольск, ул.Большая Серпуховская 43<br>
+        <br>
+        ИНН 7725414876<br>
+        <br>
+        ОГРН 1187746027193<br>
+        <br>
+        КПП 773301001
         <form action="#">
             <input type="text" placeholder="Ваше имя*"><br>
             <input type="text" placeholder="Телефон*"><br>
@@ -76,7 +58,10 @@
                 <input type="submit" value="Отправить">
             </div>
         </form>
-    </article>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577336.7639727558!2d36.82512928156911!3d55.58074807696959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2z0JzQvtGB0LrQstCw!5e0!3m2!1sru!2sru!4v1564263209501!5m2!1sru!2sru"
+            width="1410" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </main>
     <article>
         <div>&#10006;</div>
         <h2>Заказать обратный звонок</h2>
