--- a/documents.html
+++ b/documents.html
@@ -18,8 +18,8 @@
             </a>
             <ul>
                 <li><a href="company.html">КОМПАНИЯ</a></li>
-                <li>ПРОДУКЦИЯ</li>
-                <li><a href="documents.html">ДОКУМЕНТЫ</a></li>
+                <li><a href="products.html">ПРОДУКЦИЯ</a></li>
+                <li>ДОКУМЕНТЫ</li>
                 <li><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
         </nav>
@@ -30,53 +30,29 @@
     <nav>
         <a href="index.html">Главная</a>
         <hr>
-        Продукция
+        Документы
     </nav>
     <main>
-        <article>
-            <h2>Наша продукция</h2>
-            <a href="products.self-tapping screws.html">
-                <figure>
-                    <img src="img/products/self-tapping screws/self-tapping screws.jpg" alt="САМОРЕЗЫ">
-                    <figcaption>САМОРЕЗЫ</figcaption>
-                </figure>
-            </a>
-            <a href="products.anchor technology.html">
-                <figure>
-                    <img src="img/products/anchor technology/anchor technology.jpg" alt="АНКЕРНАЯ ТЕХНИКА">
-                    <figcaption>АНКЕРНАЯ ТЕХНИКА</figcaption>
-                </figure>
-            </a>
-            <a href="products.screws.html">
-                <figure>
-                    <img src="img/products/screws/screws.jpg" alt="ШУРУПЫ">
-                    <figcaption>ШУРУПЫ</figcaption>
-                </figure>
-            </a>
-            <a href="products.metriсs.html">
-                <figure>
-                    <img src="img/products/metrics/metrics.jpg" alt="МЕТРИКА">
-                    <figcaption>МЕТРИКА</figcaption>
-                </figure>
-            </a>
-        </article>
+        <h2>Документы</h2>
+        <a href="#">
+            <div></div>Устав.pdf
+        </a>
+        <a href="#">
+            <div></div>Устав.pdf
+        </a>
+        <a href="#">
+            <div></div>Аудит Май 2019.pdf
+        </a>
+        <a href="#">
+            <div></div>Аудит Май 2019.pdf
+        </a>
+        <a href="#">
+            <div></div>ОГРН+ЕГРЮЛ.pdf
+        </a>
+        <a href="#">
+            <div></div>ОГРН+ЕГРЮЛ.pdf
+        </a>
     </main>
-    <hr>
-    <article>
-        <h2>Остались вопросы? Напишите нам</h2>
-        <form action="#">
-            <input type="text" placeholder="Ваше имя*"><br>
-            <input type="text" placeholder="Телефон*"><br>
-            <input type="text" placeholder="E-mail"><br>
-            <textarea name="text" id="" cols="100" rows="10" placeholder="Комментарий"></textarea><br>
-            <div>
-                <input type="checkbox" checked>
-                Я согласен с политикой обработки<br>
-                персональных данных
-                <input type="submit" value="Отправить">
-            </div>
-        </form>
-    </article>
     <article>
         <div>&#10006;</div>
         <h2>Заказать обратный звонок</h2>
