--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <h1>VEGAKREP</h1>
             </a>
             <ul>
-                <li><a href="#">КОМПАНИЯ</a></li>
+                <li><a href="company.html">КОМПАНИЯ</a></li>
                 <li><a href="products.html">ПРОДУКЦИЯ</a></li>
-                <li><a href="#">ДОКУМЕНТЫ</a></li>
-                <li><a href="#">КОНТАКТЫ</a></li>
+                <li><a href="documents.html">ДОКУМЕНТЫ</a></li>
+                <li><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
         </nav>
         <div>
@@ -129,7 +129,7 @@
                     <figcaption>ШУРУПЫ</figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="products.metriсs.html">
                 <figure>
                     <img src="img/products/metrics/metrics.jpg" alt="МЕТРИКА">
                     <figcaption>МЕТРИКА</figcaption>
@@ -201,10 +201,7 @@
         </form>
     </article>
     <article>
-        <div>
-            <hr>
-            <hr>
-        </div>
+        <div>&#10006;</div>
         <h2>Заказать обратный звонок</h2>
         <form action="#">
             <input type="text" placeholder="Ваше имя*"><br>
