--- a/products.screws.html
+++ b/products.screws.html
@@ -17,10 +17,10 @@
                 <h1>VEGAKREP</h1>
             </a>
             <ul>
-                <li><a href="index.html">КОМПАНИЯ</a></li>
+                <li><a href="company.html">КОМПАНИЯ</a></li>
                 <li><a href="products.html">ПРОДУКЦИЯ</a></li>
-                <li><a href="#">ДОКУМЕНТЫ</a></li>
-                <li><a href="#">КОНТАКТЫ</a></li>
+                <li><a href="documents.html">ДОКУМЕНТЫ</a></li>
+                <li><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
         </nav>
         <div>
@@ -32,268 +32,80 @@
         <hr>
         <a href="products.html">Продукция</a>
         <hr>
-        Саморезы
+        Шурупы
     </nav>
     <main>
-        <h2>Саморезы</h2>
+        <h2>Шурупы</h2>
         <figure>
             <figcaption>
-                Саморез для крепления гипсокартона к<br>
-                металлическим профилям, частая резьба.
+                Шуруп для дерева универсальный
             </figcaption>
             <br>
             <br>
             <br>
-            <img src="img/products/self-tapping screws/self-tapping screws (1).png" alt="Саморез">
+            <img src="img/products/screws/screws (1).png" alt="Шуруп">
             <br>
             <br>
             <br>
             <figcaption>
-                Саморез для крепления гипсокартона к металлическим профилям с<br>
-                острым концом и мелким шагом резьбы. Используется для<br>
-                крепления гипсокартонных плит к стенам и потолку через<br>
-                металлический профиль. Мелкая резьба, малая высота витков<br>
-                позволяют легко вкручиваться саморезу в металл. Острый конец<br>
-                легко вдавливается в профиль и дает направление для ввинчивания<br>
-                самореза. Саморез легко входит в металл, плотно затягивается и не<br>
-                раскручивается. Материал самореза ­— упругая сталь C1022,<br>
-                обладающая прочными свойствами, термообработанная, не<br>
-                подвержена хрупкому излому, прочная на растяжение и<br>
-                изгиб.Покрытие самореза — химическое оксидирование,<br>
-                гальванический процесс обработки поверхностного слоя<br>
-                предохраняет изделие от корозии (не ржавеет), позволяет<br>
-                использовать его во влажной и агрессивной среде. Головка самореза<br>
-                имеет крестообразный шлиц. Для закручивания используются<br>
-                отвертка или шуруповерт со стандартной битой Phillips №2. Крепеж<br>
-                надежный и прочный. При необходимости легко поддается<br>
-                демонтажу.<br>
+                Шуруп универсальный 4,5х70 ЦЖ пот. PZ широкого спектора<br>
+                назначения, применяется в ремонтных и строительно-монтажных<br>
+                работах, для крепления основ из дерева, металла, пластика.<br>
+                Универсальный саморез имеет полную резьбу со специальным<br>
+                шагом и острый наконечник, что гарантирует прочность соединения.<br>
+                Потайная головка с крестообразным шлицом типа Pozidrive (PZ)<br>
+                облегчает и обеспечивает надежное вкручивание самореза, как<br>
+                вручную, так и при использовании шуруповерта. Шуруп<br>
+                универсальный с потайной головкой изготовляется из закаленной,<br>
+                цементированной стали марки С1022 с оцинкованным покрытием<br>
+                (ЦЖ) для защиты от коррозии и агрессивной среды.<br>
                 <br>
                 <br>
-                Головка: потайная, шлиц Phillips №2, М=4,5-5,1, на шляпке знак «Т»<br>
-                Резьба: частая, полная/неполная, двухзаходная(две нитки)<br>
+                Головка: потайная, шлиц Pozidrive<br>
+                Резьба: полная/неполная<br>
                 Наконечник: острый<br>
-                Покрытие: фосфатированный, цвет серый<br>
-                Материал: сталь С1018, С1022<br>
-                Твердость сердцевины: 290-450 HV<br>
-                Твердость поверностного слоя: 550-720 HV
+                Покрытие: белый или желтый цинк<br>
+                Материал: сталь С1022<br>
+                Минимальный разрушающий момент: 1,5-10,8 Нм<br>
+                Твердость сердцевины: 320-450 HV<br>
+                Твердость поверхности: min 550 HV
             </figcaption>
         </figure>
         <figure>
             <figcaption>
-                Саморез для крепления гипсокартона к деревянной<br>
-                обрешетке, крупная резьба
+                Шуруп для крепления деревянных лаг и реек DIN 571
             </figcaption>
             <br>
             <br>
             <br>
-            <img src="img/products/self-tapping screws/self-tapping screws (2).png" alt="Саморез">
+            <img src="img/products/screws/screws (2).png" alt="Шуруп">
             <br>
             <br>
             <br>
             <figcaption>
-                Предназначен для крепления гипсокартонных листов к деревянным<br>
-                конструкциям. Головка с крестообразным шлицем Phillips №2.<br>
-                Саморез для крепления гипсокартона к деревянной обрешетке с<br>
-                острым концом и крупным шагом резьбы. Крупная резьба для данного<br>
-                изделия необходима, так как основа для крепления гипсокартонного<br>
-                листа — деревянный брусок, доска, обрешетка. Дерево — материал<br>
-                мягкий, и для прочного крепления необходим крупный профиль<br>
-                резьбы. Саморез легко входит в основание, плотно затягивается и не<br>
-                раскручивается. Материал самореза упругая сталь, обладающая<br>
-                прочными свойствами, не подвержена хрупкому излому, прочная на<br>
-                растяжение и изгиб. Покрытие самореза — химическое<br>
-                оксидирование, предохраняет его во влажной и агрессивной среде от<br>
-                коррозии. Головка самореза имеет крестообразный шлиц. Для<br>
-                закручивания используются отвертка или шуруповерт со стандартной<br>
-                битой Phillips №2. Крепеж надежный и прочный. При необходимости<br>
-                легко поддается демонтажу.<br>
+                Шуруп для крепления деревянных лаг и реек применяется в<br>
+                строительстве, кровельных работах, мебельном производстве и<br>
+                других отраслях промышленности. Для надежного крепления<br>
+                соединяемых изделий используется крупный шаг нарезки шурупа.<br>
+                Крупный шаг в мягком материале позволяет прочно соединить<br>
+                деревянные детали. Покрытие белый цинк защищает от коррозии<br>
+                металла, увеличивает долговечность соединения. Изделие<br>
+                универсальное, прочное и надежное. Особенность материала<br>
+                шурупа — упругость, прочность, отсутствие хрупкости.<br>
                 <br>
                 <br>
-                Головка: потайная, шлиц Phillips №2, М=4,5-5,1, на шляпке знак «Т»<br>
-                Резьба: крупная, полная/неполная<br>
-                Наконечник: острый<br>
-                Покрытие: фосфатированный, цвет серый<br>
-                Материал: сталь С1018, С1022<br>
-                Твердость сердцевины: 290-450 HV<br>
-                Твердость поверхностного слоя: 550-720 HV
-            </figcaption>
-        </figure>
-        <hr>
-        <figure>
-            <figcaption>
-                Саморез с прессшайбой для крепления листового<br>
-                металла к металлическим профилям, острый
-            </figcaption>
-            <br>
-            <br>
-            <br>
-            <img src="img/products/self-tapping screws/self-tapping screws (3).png" alt="Саморез">
-            <br>
-            <br>
-            <br>
-            <figcaption>
-                Саморез с прессшайбой для крепления листового металла к<br>
-                металлическим и деревянным конструкциям. Конструкция самореза<br>
-                позволяет просверливать металл толщиной до 0,9 мм. Шайба<br>
-                напрессованная под головкой равномерно распределяет осевую<br>
-                нагрузку на прижимаемый лист и прочно крепит его к основанию.<br>
-                Покрытие — белый цинк исключает коррозию, удлиняет срок службы<br>
-                соединения, что особенно важно в случае крепления кровли.<br>
-                Отвертка, бита, шлиц Phillips №2 стандартный.<br>
-                <br>
-                <br>
-                Головка: полусферическая с прессшайбой, шлиц Phillips №2, М=4,5-5,1<br>
-                Резьба: крупная<br>
-                Наконечник: острый<br>
-                Длина резьбы: Lt-полная<br>
-                Минимальный разрушающий момент: 4,2 Нм<br>
-                Твердость сердцевины: 240-450 HV<br>
-                Твердость поверхностного слоя: 550 min HV<br>
-                Применение: металлический профиль до 0,9мм
-            </figcaption>
-        </figure>
-        <figure>
-            <figcaption>
-                Саморез с прессшайбой для крепления листового<br>
-                металла к металлическим профилям, сверло
-            </figcaption>
-            <br>
-            <br>
-            <br>
-            <img src="img/products/self-tapping screws/self-tapping screws (4).png" alt="Саморез">
-            <br>
-            <br>
-            <br>
-            <figcaption>
-                Саморез с прессшайбой для крепления листового металла к<br>
-                металлическим профилям имеет широкое применение в<br>
-                строительстве, монтаже, других крепежных работах. В направляющей<br>
-                части самореза сверло обладает способностью просверливать<br>
-                мелталл толщиной 2мм. Средняя часть шурупа входит по резьбе в<br>
-                просверленное отверстие. Соединение получается очень прочное за<br>
-                счет обжима напресованной шайбой.<br>
-                Передача вращения через крестообразный стандартный шлиц Phillips<br>
-                №2.<br>
-                <br>
-                <br>
-                Головка: полусферическая с прессшайбой, шлиц Phillips №2, М=4,5-5,1<br>
-                Резьба: частая<br>
-                Наконечник: сверло<br>
-                Длина резьбы: Lt-полная<br>
-                Минимальный разрушающий момент: 4,5 Нм<br>
-                Твердость сердцевины: 240-425 HV<br>
-                Твердость поверхностного слоя: 560 min HV<br>
-                Применение: металлический порфиль до 2мм
-            </figcaption>
-        </figure>
-        <hr>
-        <figure>
-            <figcaption>
-                Саморез с прессшайбой для крепления листового<br>
-                металла к металлическим профилям, с шайбой и<br>
-                резиновой прокладкой EPDM
-            </figcaption>
-            <br>
-            <br>
-            <br>
-            <img src="img/products/self-tapping screws/self-tapping screws (5).png" alt="Саморез">
-            <br>
-            <br>
-            <br>
-            <figcaption>
-                Предназначен для крепления кровельных мелталлических листов к<br>
-                металлическим конструкциям. Рекомендуемая толщина материала<br>
-                5,5-5,0мм; 6,3-6,0мм. Саморез для крепления кровельных материалов к<br>
-                металлическим профилям с шайбой и резиновой прокладкой EPDM<br>
-                представляет собой комбинированное крепежное изделие. В<br>
-                качестве направляющей части сверло, в основной части с частой<br>
-                резьбой. Резиновая прокладка прижимается сверху сферической<br>
-                накладкой из металла. Металлочерепица или листовой кровельный<br>
-                материал накладывается на металлическую конструкцию — профиль,<br>
-                уголок, швеллер, листовую полосу и т.п. С помощью вращательного<br>
-                инструмента, оснащенного шестигранной головкой, саморез<br>
-                просверливает кровельный материал и входит в металлическую<br>
-                основу каркаса. В просверленные отверстия основной частью<br>
-                саморизанаризуется резьба и саморез плотно затягивается до упора.<br>
-                За счет металлической накладки над резиновой шайбой отверстие<br>
-                плотно и герметично обжимается. Частая мелкая резьба прочно<br>
-                закрепляет саморез в металлической основе. Получается прочное,<br>
-                герметичное соединение кровельного покрытия с металлической<br>
-                основой. Саморез имеет защитное гальваническое покрытие — белый<br>
-                цинк. Саморез нехрупкий (гнется, но не ломается) изготовлен из<br>
-                прочной и упругой стали С1022. Характеристики прочности стали<br>
-                гарантируют надежное крепление при ветровых и других силовых<br>
-                нагрузках.<br>
-                <br>
-                <br>
-                Головка: шестигранная с буртом, под ключ 8мм, на шляпке знак маркировки в виде буквы «Х»<br>
-                Шайба: с плоской покладкой EPDM толщиной Ar=2,4-2,8мм;<br>
-                а=0,7-0,9мм<br>
-                Резьба: редкая<br>
-                Наконечник: уменьшенное сверло<br>
-                Твердость сердцевины: 240-425 HV<br>
-                Твердость поверхностного слоя: 560 min HV<br>
-                Макс. усилие на скручивание: 65кг/см (6,5 Нм)<br>
-                Макс. толщина просверливаемого материала: 3мм
-            </figcaption>
-        </figure>
-        <figure>
-            <figcaption>
-                Саморез с прессшайбой для крепления листового<br>
-                металла к металлическим профилям, с шайбой и<br>
-                резиновой прокладкой EPDM
-            </figcaption>
-            <br>
-            <br>
-            <br>
-            <img src="img/products/self-tapping screws/self-tapping screws (6).png" alt="Саморез">
-            <br>
-            <br>
-            <br>
-            <figcaption>
-                Предназначен для крепления кровельных мелталлических листов к<br>
-                металлическим конструкциям. При диаметре самореза 5,5 мм<br>
-                рекомендуемая толщина материала 5,5мм; пр 6,3-6,0мм. Саморез для<br>
-                крепления кровельных металлических листов к металлическим<br>
-                профилям с шайбой и резиновой прокладкой EPDM представляет<br>
-                собой комбинированное крепежное изделие. В качестве<br>
-                направляющей части сверло, в основной части с частой резьбой.<br>
-                Резиновая прокладка прижимается сверху сферической накладкой из<br>
-                металла. Металлочерепица или листовой кровельный материал<br>
-                накладывается на металлическую конструкцию — профиль, уголок,<br>
-                швеллер, листовую полосу и т.п. С помощью вращательного<br>
-                инструмента, оснащенного шестигранной головкой, саморез<br>
-                просверливает кровельный материал и входит в металлическую<br>
-                основу каркаса. В просверленные отверстия основной частью<br>
-                саморизанаризуется резьба и саморез плотно затягивается до упора.<br>
-                За счет металлической накладки над резиновой шайбой отверстие<br>
-                плотно и герметично закрыто. Частая мелкая резьба прочно<br>
-                закрепляет саморез в металлической основе. Получается прочное,<br>
-                герметичное соединение кровельного покрытия с металлической<br>
-                основой. Саморез имеет защитное гальваническое покрытие — белый<br>
-                цинк. Саморез нехрупкий (гнется, но не ломается) изготовлен из<br>
-                прочной и упругой стали С1022. Характеристики прочности стали<br>
-                гарантируют надежное крепление при ветровых и других силовых<br>
-                нагрузках.<br>
-                <br>
-                <br>
-                Головка: шестигранная с буртом, под ключ 8мм (5,5xL) или 10мм (6,3 xL),<br>
-                на шляпке знак маркировки в виде буквы «Х»<br>
-                Шайба: с плоской покладкой EPDM толщиной Ar=2,4-2,8мм;<br>
-                а=0,7-0,9мм<br>
-                Резьба: частая<br>
-                Наконечник: усиленное сверло<br>
-                Твердость сердцевины: 270-425 HV<br>
-                Твердость поверностного слоя: 560 min HV
+                Размер: от Ф6 к Ф12<br>
+                Марка стали: С1022<br>
+                Покрытие: белый цинк<br>
+                Класс прочности: 4,8<br>
+                Твердость сердцевины: 220 HV<br>
+                Твердость поверхности: min 240 HV
             </figcaption>
         </figure>
     </main>
     <hr>
     <article>
-        <div>
-            <hr>
-            <hr>
-        </div>
+        <div>&#10006;</div>
         <h2>Заказать обратный звонок</h2>
         <form action="#">
             <input type="text" placeholder="Ваше имя*"><br>
