--- a/products.self-tapping screws.html
+++ b/products.self-tapping screws.html
@@ -17,10 +17,10 @@
                 <h1>VEGAKREP</h1>
             </a>
             <ul>
-                <li><a href="index.html">КОМПАНИЯ</a></li>
+                <li><a href="company.html">КОМПАНИЯ</a></li>
                 <li><a href="products.html">ПРОДУКЦИЯ</a></li>
-                <li><a href="#">ДОКУМЕНТЫ</a></li>
-                <li><a href="#">КОНТАКТЫ</a></li>
+                <li><a href="documents.html">ДОКУМЕНТЫ</a></li>
+                <li><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
         </nav>
         <div>
@@ -290,10 +290,7 @@
     </main>
     <hr>
     <article>
-        <div>
-            <hr>
-            <hr>
-        </div>
+        <div>&#10006;</div>
         <h2>Заказать обратный звонок</h2>
         <form action="#">
             <input type="text" placeholder="Ваше имя*"><br>
